fixing the border issues on mobile display

--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -60,6 +60,7 @@ footer {
 
     a {
         width: 90%;
+        border-bottom: 8px solid #003459;
     }
 
     p {
